--- a/finalartifact2.html
+++ b/finalartifact2.html
@@ -7,7 +7,16 @@
 </head>
 <body>
     
+    <h2> Congradulations of finishing the test</h2>
+    <h3> Your type is a <em>water</em> type</h3>
 
-   <p>Here are the result of the quiz</p> 
+
+
+
+<p> Link to <strong>another</strong> another pokemon quiz you can try!</p>
+<a href="https://www.buzzfeed.com/VannaLin/what-type-of-pokamon-are-you-3l2qv"> Other pokemon quiz!</a> <br></br>
+
+<a href="finalartifact.html"> Return to other page </a>
+   
 </body>
 </html>
